--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors",
-    "build": "webpack --config webpack-production.config.js --progress --colors"
+    "dist": "webpack --config webpack-production.config.js --progress --colors"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
